--- a/frontend/src/app/stats/stats.component.html
+++ b/frontend/src/app/stats/stats.component.html
@@ -1,4 +1,5 @@
+
 <div class="chartdiv">
-    <p-chart type="pie" [data]="data" [options]="chartOptions"  [style]="{'width': '100px'}"></p-chart>
+    <p-chart type="pie" [data]="data" [options]="chartOptions"  [style]="{'width': '350px', 'height': '350px'}"></p-chart>
 
 </div>
